fix mobile wrapping

--- a/assets/css/_intro.styl
+++ b/assets/css/_intro.styl
@@ -1,6 +1,7 @@
 .first
   text-align: center
   animation: 1s 12s Hidden ease-out forwards
+  white-space: nowrap
 
   h1
     position: absolute
